Add CSV module, VPA chunk filter framework, and platform-adaptive decode
Major feature additions for the next release:
- libfindchars-csv: SIMD-accelerated CSV parser (~1.8 GB/s) with zero-copy field access
- VPA chunk filter: stateful per-chunk filtering with Hillis-Steele parallel prefix primitives
- Platform-adaptive decode: AVX-512 VPCOMPRESSB vs ARM/AVX2 scatter, anyTrue() fast-reject
- Position type int→long for >2 GB file support
- cleanLUT shuffle replacing per-literal compare+add loops
- Refactored compiler pipeline, DCE, and inliner for readability
- New tests, CSV benchmarks, FastCSV comparison, sentrux rules, changelog